<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<parent>
		<groupId>net.anotheria</groupId>
		<artifactId>parent</artifactId>
		<version>2.13</version>
	</parent>

	<modelVersion>4.0.0</modelVersion>
	<groupId>org.moskito</groupId>
	<artifactId>moskito-control</artifactId>
	<packaging>pom</packaging>
	<version>3.0.1-SNAPSHOT</version>
	<name>MoSKito Control</name>

    <properties>
        <moskito.version>2.10.0</moskito.version>
		<aspectj.version>1.8.7</aspectj.version>
		<aspectj-maven-plugin.version>1.8</aspectj-maven-plugin.version>
		<aspectj-maven-plugin.complianceLevel>1.8</aspectj-maven-plugin.complianceLevel>
		<source-version>1.8</source-version>
		<target-version>1.8</target-version>
		<jersey-version>1.18.1</jersey-version>

		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>

    </properties>

	<modules>
		<module>common</module>
		<module>config</module>
		<module>connectors</module>
		<module>core</module>
		<module>agents</module>
		<module>plugins</module>
		<module>ui</module>
	</modules>

    <dependencyManagement>
		<dependencies>
		<!-- logging -->
		<dependency>
		    <groupId>org.slf4j</groupId>
		    <artifactId>slf4j-api</artifactId>
			<version>1.7.21</version>
		</dependency>
		<dependency>
		    <groupId>ch.qos.logback</groupId>
		    <artifactId>logback-classic</artifactId>
			<version>1.2.0</version>
		</dependency>        
		<dependency>
            <groupId>net.anotheria</groupId>
            <artifactId>configureme</artifactId>
            <version>2.4.1</version>
        </dependency>

		<dependency>
			<groupId>net.anotheria</groupId>
			<artifactId>ano-tags</artifactId>
			<version>2.1.1</version>
		</dependency>
		<dependency>
			<groupId>net.anotheria</groupId>
			<artifactId>moskito-inspect-embedded</artifactId>
			<version>${moskito.version}</version>
		</dependency>
		<dependency>
			<groupId>net.anotheria</groupId>
			<artifactId>moskito-core</artifactId>
			<version>${moskito.version}</version>
		</dependency>
		<dependency>
			<groupId>net.anotheria</groupId>
			<artifactId>moskito-aop</artifactId>
			<version>${moskito.version}</version>
		</dependency>
		<dependency>
			<groupId>net.anotheria</groupId>
			<artifactId>moskito-webui</artifactId>
			<version>${moskito.version}</version>
		</dependency>
		<dependency>
			<groupId>net.anotheria</groupId>
			<artifactId>ano-maf</artifactId>
			<version>2.2.0</version>

		</dependency>
		<dependency>
			<groupId>com.sun.mail</groupId>
			<artifactId>javax.mail</artifactId>
			<version>1.4.4</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>javax.activation</groupId>
			<artifactId>activation</artifactId>
			<version>1.1.1</version>
			<type>jar</type>
		</dependency>
        <!-- jersey -->
        <dependency>
            <groupId>com.sun.jersey</groupId>
            <artifactId>jersey-server</artifactId>
            <version>${jersey-version}</version>
        </dependency>
			<dependency>
				<groupId>com.sun.jersey</groupId>
				<artifactId>jersey-client</artifactId>
				<version>${jersey-version}</version>
			</dependency>
        <dependency>
            <groupId>com.sun.jersey</groupId>
            <artifactId>jersey-servlet</artifactId>
			<version>${jersey-version}</version>
        </dependency>
        <dependency>
            <groupId>com.sun.jersey</groupId>
            <artifactId>jersey-json</artifactId>
			<version>${jersey-version}</version>
        </dependency>
		<dependency>
			<groupId>com.sun.jersey.contribs</groupId>
			<artifactId>jersey-multipart</artifactId>
			<version>${jersey-version}</version>
		</dependency>
		<!-- jdbc connector -->
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.0.0</version>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>8.0.28</version>
		</dependency>
		<dependency>
			<groupId>org.mongodb</groupId>
			<artifactId>mongodb-driver</artifactId>
			<version>3.4.2</version>
		</dependency>

		<dependency>
			<groupId>org.tuckey</groupId>
			<artifactId>urlrewritefilter</artifactId>
			<version>4.0.3</version>
		</dependency>

		<dependency>
			<groupId>com.github.seratch</groupId>
			<artifactId>jslack</artifactId>
			<version>1.0.25</version>
		</dependency>

		<dependency>
			<groupId>com.opsgenie.integration</groupId>
			<artifactId>sdk</artifactId>
			<version>2.11.0</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.10.0.pr1</version>
		</dependency>
		<dependency>
		    <groupId>com.jayway.jsonpath</groupId>
		    <artifactId>json-path</artifactId>
		    <version>2.3.0</version>
			<exclusions>
				<exclusion>
					<groupId>org.ow2.asm</groupId>
					<artifactId>asm</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>3.0.0</version>
			<scope>test</scope>
		</dependency>
		</dependencies>

	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>



	<scm>
        <url>git:git@github.com:anotheria/moskito-control.git</url>
        <connection>scm:git:git@github.com:anotheria/moskito-control.git</connection>
        <developerConnection>scm:git:git@github.com:anotheria/moskito-control.git</developerConnection>
    </scm>

</project>
